Update meta tags

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <meta name="keywords" content="keyword" />
-    <meta name="description" content="description" />
+    <title>I Collect Movie Tickets</title>
+    <meta name="keywords" content="movie, tickets, movie tickets, collection" />
+    <meta name="description" content="My name is Jacob Proffer and I collect movie tickets." />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1"/>
     <link rel="stylesheet" href="dist/css/project-main.min.css">
   </head>
