Add page structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="dist/css/project-main.min.css">
   </head>
   <body>
+    <div class="page-wrap">
+      <div class="movie-tickets">
+        <div class="info-row"></div>
+        <div class="ticket-row"></div>
+      </div>
+    </div>
     <script src="dist/js/app.min.js" charset="utf-8"></script>
   </body>
 </html>
