Add flexbox set-up for title row

--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
   <body>
     <div class="page-wrap">
       <div class="movie-tickets">
-        <div class="info-row"></div>
+        <div class="info-row">
+          <div class="info-col">
+            test
+          </div>
+          <div class="info-col">
+            test
+          </div>
+          <div class="info-col">
+            test
+          </div>
+          <div class="info-col">
+            test
+          </div>
+        </div>
         <div class="ticket-row"></div>
       </div>
     </div>
