Add flexbox set-up for ticket-row

--- a/index.html
+++ b/index.html
@@ -12,19 +12,32 @@
       <div class="movie-tickets">
         <div class="info-row">
           <div class="info-col">
-            test
+            Movie Title
           </div>
           <div class="info-col">
-            test
+            Genre
           </div>
           <div class="info-col">
-            test
+            Year
           </div>
           <div class="info-col">
-            test
+            Theatre
           </div>
         </div>
-        <div class="ticket-row"></div>
+        <div class="ticket-row">
+          <div class="ticket-col">
+            Alien: Resurrection
+          </div>
+          <div class="ticket-col">
+            Sci-Fi / Horror
+          </div>
+          <div class="ticket-col">
+            1997
+          </div>
+          <div class="ticket-col">
+            GKC Royal Cinemas
+          </div>
+        </div>
       </div>
     </div>
     <script src="dist/js/app.min.js" charset="utf-8"></script>
