Update colors and titles

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             Genre
           </div>
           <div class="info-col">
-            Year
+            Year Watched
           </div>
           <div class="info-col">
-            Theatre
+            Theatre Watched
           </div>
         </div>
         <div class="ticket-row">
