--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="keywords" content="movie, tickets, movie tickets, collection" />
     <meta name="description" content="My name is Jacob Proffer and I collect movie tickets." />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1"/>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/project-main.min.css">
   </head>
   <body>
