--- a/index.html
+++ b/index.html
@@ -25,8 +25,39 @@
             Theatre Watched
           </div>
         </div>
+        <div class="ticket-row" data-year="2009">
+          <div class="info-col">Twilight: New Moon</div>
+          <div class="info-col">Fantasy</div>
+          <div class="info-col">2009</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row" data-year="2009">
+          <div class="info-col">Final Destination 4</div>
+          <div class="info-col">Horror</div>
+          <div class="info-col">2009</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row" data-year="2012">
+          <div class="info-col">Battleship</div>
+          <div class="info-col">Sci-Fi</div>
+          <div class="info-col">2012</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row" data-year="2013">
+          <div class="info-col">This is the End</div>
+          <div class="info-col">Comedy</div>
+          <div class="info-col">2013</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row" data-year="2009">
+          <div class="info-col">Did You Hear About the Morgans?</div>
+          <div class="info-col">Romantic Comedy</div>
+          <div class="info-col">2009</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
       </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="dist/js/app.min.js" charset="utf-8"></script>
   </body>
 </html>
