Sort by epoch date

--- a/index.html
+++ b/index.html
@@ -25,34 +25,28 @@
             Theatre Watched
           </div>
         </div>
-        <div class="ticket-row" data-year="2009">
-          <div class="info-col">Twilight: New Moon</div>
-          <div class="info-col">Fantasy</div>
-          <div class="info-col">2009</div>
-          <div class="info-col">Carmike Cinemas</div>
+        <div class="ticket-row">
+          <div class="info-col">The Equalizer</div>
+          <div class="info-col">Action</div>
+          <div class="info-col date" data-date="1411862400">09/28/2014</div>
+          <div class="info-col">Thomas Theatre Group</div>
         </div>
-        <div class="ticket-row" data-year="2009">
-          <div class="info-col">Final Destination 4</div>
-          <div class="info-col">Horror</div>
-          <div class="info-col">2009</div>
-          <div class="info-col">Carmike Cinemas</div>
+        <div class="ticket-row">
+          <div class="info-col">American Sniper</div>
+          <div class="info-col">Action</div>
+          <div class="info-col date" data-date="1421539200">01/18/2015</div>
+          <div class="info-col">Thomas Theatre Group</div>
         </div>
-        <div class="ticket-row" data-year="2012">
+        <div class="ticket-row">
           <div class="info-col">Battleship</div>
           <div class="info-col">Sci-Fi</div>
-          <div class="info-col">2012</div>
+          <div class="info-col date" data-date="1337385600">05/19/2012</div>
           <div class="info-col">Carmike Cinemas</div>
         </div>
-        <div class="ticket-row" data-year="2013">
-          <div class="info-col">This is the End</div>
-          <div class="info-col">Comedy</div>
-          <div class="info-col">2013</div>
-          <div class="info-col">Carmike Cinemas</div>
-        </div>
-        <div class="ticket-row" data-year="2009">
-          <div class="info-col">Did You Hear About the Morgans?</div>
-          <div class="info-col">Romantic Comedy</div>
-          <div class="info-col">2009</div>
+        <div class="ticket-row">
+          <div class="info-col">The Last Song</div>
+          <div class="info-col">Drama</div>
+          <div class="info-col date" data-date="1269993600">03/31/2010</div>
           <div class="info-col">Carmike Cinemas</div>
         </div>
       </div>
