Update title and add more entries

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             Genre
           </div>
           <div class="info-col">
-            Year Watched
+            Date Watched
           </div>
           <div class="info-col">
             Theatre Watched
@@ -45,7 +45,7 @@
         </div>
         <div class="ticket-row">
           <div class="info-col">The Last Song</div>
-          <div class="info-col">Drama</div>
+          <div class="info-col">Romance</div>
           <div class="info-col date" data-date="1269993600">03/31/2010</div>
           <div class="info-col">Carmike Cinemas</div>
         </div>
@@ -83,6 +83,96 @@
           <div class="info-col">He's Just Not That Into You</div>
           <div class="info-col">Romance</div>
           <div class="info-col date" data-date="1236643200">03/10/2009</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Victor Frankenstein</div>
+          <div class="info-col">Sci-Fi</div>
+          <div class="info-col date" data-date="1422403200">01/28/2015</div>
+          <div class="info-col">Thomas Theatre Group</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Did You Hear About the Morgans?</div>
+          <div class="info-col">Romance</div>
+          <div class="info-col date" data-date="1261872000">12/27/2009</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Magic Mike</div>
+          <div class="info-col">Drama</div>
+          <div class="info-col date" data-date="1342310400">07/15/2012</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">The Hangover 2</div>
+          <div class="info-col">Comedy</div>
+          <div class="info-col date" data-date="1307836800">06/12/2011</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Zero Dark Thirty</div>
+          <div class="info-col">Action</div>
+          <div class="info-col date" data-date="1358121600">01/14/2013</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Wild Hogs</div>
+          <div class="info-col">Comedy</div>
+          <div class="info-col date" data-date="1173484800">03/10/2007</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Yes Man</div>
+          <div class="info-col">Comedy</div>
+          <div class="info-col date" data-date="1230422400">12/28/2008</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Prom Night</div>
+          <div class="info-col">Thriller</div>
+          <div class="info-col date" data-date="1208563200">04/19/2008</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Traitor</div>
+          <div class="info-col">Action</div>
+          <div class="info-col date" data-date="1220659200">09/06/2008</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">The Town</div>
+          <div class="info-col">Thriller</div>
+          <div class="info-col date" data-date="1285372800">09/25/2010</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Prometheus</div>
+          <div class="info-col">Sci-Fi</div>
+          <div class="info-col date" data-date="1339804800">06/16/2012</div>
+          <div class="info-col">AMC Empire 25</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Hancock</div>
+          <div class="info-col">Action</div>
+          <div class="info-col date" data-date="1216425600">07/19/2008</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">22 Jump Street</div>
+          <div class="info-col">Comedy</div>
+          <div class="info-col date" data-date="1402617600">06/13/2014</div>
+          <div class="info-col">Thomas Theatre Group</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Terminator Salvation</div>
+          <div class="info-col">Thriller</div>
+          <div class="info-col date" data-date="1242950400">05/22/2009</div>
+          <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Disturbia</div>
+          <div class="info-col">Thriller</div>
+          <div class="info-col date" data-date="1176508800">04/14/2007</div>
           <div class="info-col">Carmike Cinemas</div>
         </div>
       </div>
