Add more entries

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
         <div class="ticket-row">
           <div class="info-col">The Town</div>
-          <div class="info-col">Thriller</div>
+          <div class="info-col">Crime</div>
           <div class="info-col date" data-date="1285372800">09/25/2010</div>
           <div class="info-col">Carmike Cinemas</div>
         </div>
@@ -270,6 +270,66 @@
           <div class="info-col">Sci-Fi</div>
           <div class="info-col date" data-date="1180137600">05/26/2007</div>
           <div class="info-col">Carmike Cinemas</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Krampus</div>
+          <div class="info-col">Horror</div>
+          <div class="info-col date" data-date="1449204000">12/04/2015</div>
+          <div class="info-col">Thomas Theatre Group</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Hercules</div>
+          <div class="info-col">Fantasy</div>
+          <div class="info-col date" data-date="1406419200">07/27/2014</div>
+          <div class="info-col">Thomas Theatre Group</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Hell or High Water</div>
+          <div class="info-col">Crime</div>
+          <div class="info-col date" data-date="1473552000">09/11/2016</div>
+          <div class="info-col">Thomas Theatre Group</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Penguins of Madagascar</div>
+          <div class="info-col">Adventure</div>
+          <div class="info-col date" data-date="1418256000">12/11/2014</div>
+          <div class="info-col">Thomas Theatre Group</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Mission Impossible: Rogue Nation</div>
+          <div class="info-col">Action</div>
+          <div class="info-col date" data-date="1438905600">08/07/2015</div>
+          <div class="info-col">Thomas Theatre Group</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Deadpool</div>
+          <div class="info-col">Fantasy</div>
+          <div class="info-col date" data-date="1455580800">02/16/2016</div>
+          <div class="info-col">Thomas Theatre Group</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Straight Outta Compton</div>
+          <div class="info-col">Drama</div>
+          <div class="info-col date" data-date="1439769600">08/17/2015</div>
+          <div class="info-col">Thomas Theatre Group</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Black Mass</div>
+          <div class="info-col">Crime</div>
+          <div class="info-col date" data-date="1442534400">09/18/2015</div>
+          <div class="info-col">Thomas Theatre Group</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Entourage</div>
+          <div class="info-col">Drama</div>
+          <div class="info-col date" data-date="1433289600">06/03/2015</div>
+          <div class="info-col">Thomas Theatre Group</div>
+        </div>
+        <div class="ticket-row">
+          <div class="info-col">Hardcore Henry</div>
+          <div class="info-col">Action</div>
+          <div class="info-col date" data-date="1459987200">04/07/2016</div>
+          <div class="info-col">Thomas Theatre Group</div>
         </div>
       </div>
     </div>
