Begin work on data

--- a/index.html
+++ b/index.html
@@ -317,21 +317,27 @@
           <div class="info-col">Black Mass</div>
           <div class="info-col">Crime</div>
           <div class="info-col date" data-date="1442534400">09/18/2015</div>
-          <div class="info-col">Thomas Theatre Group</div>
+          <div class="info-col" data-theatre="thomas theatre group">Thomas Theatre Group</div>
         </div>
         <div class="ticket-row">
           <div class="info-col">Entourage</div>
           <div class="info-col">Drama</div>
           <div class="info-col date" data-date="1433289600">06/03/2015</div>
-          <div class="info-col">Thomas Theatre Group</div>
+          <div class="info-col" data-theatre="thomas theatre group">Thomas Theatre Group</div>
         </div>
         <div class="ticket-row">
           <div class="info-col">Hardcore Henry</div>
-          <div class="info-col">Action</div>
+          <div class="info-col" data-genre="action">Action</div>
           <div class="info-col date" data-date="1459987200">04/07/2016</div>
-          <div class="info-col">Thomas Theatre Group</div>
+          <div class="info-col" data-theatre="thomas theatre group">Thomas Theatre Group</div>
         </div>
       </div>
+      <section class="counters">
+        <div class="numMovies">
+          <h1></h1>
+          <h2>Movies</h2>
+        </div>
+      </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="dist/js/app.min.js" charset="utf-8"></script>
