--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
       <div class="movie-tickets">
         <div class="info-row">
           <div class="info-col">
-            Movie Title
+            Title
           </div>
           <div class="info-col">
             Genre
           </div>
           <div class="info-col">
-            Date Watched
+            Date
           </div>
           <div class="info-col">
-            Theatre Watched
+            Theatre
           </div>
         </div>
         <div class="ticket-row">
