--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-<?php
-
-// Get JSON
-$movies_data = "json/movies.json";
-$movies_json = file_get_contents($movies_data);
-$data = json_decode($movies_json, TRUE);
-
-?>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -47,3 +39,18 @@ $data = json_decode($movies_json, TRUE);
         <h1>Recent Movies</h1>
       </div>
     </header>
+    <section class="movies">
+      <div class="container">
+        <div class="movie-tickets">
+          <!-- JSON GOES HERE -->
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <span class="open-info-modal">Info</span>
+      </div>
+    </footer>
+    <script src="dist/js/app.min.js" charset="utf-8"></script>
+  </body>
+</html>
