--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <span class="open-info-modal">Info</span>
       </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="dist/js/app.min.js" charset="utf-8"></script>
   </body>
 </html>
