--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Recent Movies</title>
+    <title>Movies</title>
     <meta name="keywords" content="movie, tickets, movie tickets, archive" />
     <meta name="description" content="This site serves as an archive of the movies Jacob Proffer has seen in theatres, powered by PHP, JSON and JavaScript." />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1"/>
@@ -10,11 +10,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
     <link rel="manifest" href="favicons/manifest.json">
-    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#9f9dc6">
+    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#000000">
     <link rel="shortcut icon" href="favicons/favicon.ico">
     <meta name="msapplication-config" content="favicons/browserconfig.xml">
-    <meta name="theme-color" content="#2a2a43">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200" rel="stylesheet">
+    <meta name="theme-color" content="#ffffff">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/project-main.min.css">
   </head>
   <script>
@@ -36,7 +36,7 @@
     </div>
     <header>
       <div class="container">
-        <h1>Recent Movies</h1>
+        <h1>Movies</h1>
       </div>
     </header>
     <section class="movies">
