--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <div class="info-modal close-info-modal">
       <div class="info-modal-container">
-        <p>This site serves as an archive of the movies I've seen in theatres, powered by JSON and JavaScript. I've currently seen <span id="numOfMovies"></span> movies in <span id="numOfTheatres"></span> movie theatres since 2007. All data collected from movie tickets.</p>
+        <p>This site serves as an archive of the movies I've seen in theatres, powered by JSON and JavaScript. I've currently seen <span id="numOfMovies"></span> movies in <span id="numOfTheatres"></span> movie theatres since 2007. All data collected from an enormous amount of movie tickets.</p>
       </div>
       <div class="info-modal-footer">
         <span class="info-modal-close">Close</span>
