--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     </div>
     <header>
       <div class="container">
-        <h1>Movies</h1>
+        <h1 class="animated bounceInDown">Movies</h1>
       </div>
     </header>
-    <section class="movies">
+    <section class="movies animated hinge bounceInUp">
       <div class="container">
         <div class="movie-tickets">
           <!-- Date is outputed here -->
