--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </div>
     </section>
-    <footer>
+    <footer class="animated fadeIn">
       <div class="container">
         <span class="open-info-modal">Info</span>
       </div>
