Strip out animations

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
     </div>
     <header>
       <div class="container">
-        <h1 class="animated bounceInDown">Movies</h1>
+        <h1>Movies</h1>
       </div>
     </header>
-    <section class="movies animated hinge bounceInUp">
+    <section class="movies">
       <div class="container">
         <div class="movie-tickets">
           <!-- Date is outputed here -->
         </div>
       </div>
     </section>
-    <footer class="animated fadeIn">
+    <footer>
       <div class="container">
         <span class="open-info-modal">Info</span>
       </div>
