--- a/index.html
+++ b/index.html
@@ -18,13 +18,28 @@
     <link rel="stylesheet" href="dist/css/project-main.min.css">
   </head>
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-100014360-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+  (function(i, s, o, g, r, a, m) {
+  i["GoogleAnalyticsObject"] = r;
+  (i[r] =
+    i[r] ||
+    function() {
+      (i[r].q = i[r].q || []).push(arguments);
+    }),
+    (i[r].l = 1 * new Date());
+  (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+  a.async = 1;
+  a.src = g;
+  m.parentNode.insertBefore(a, m);
+})(
+  window,
+  document,
+  "script",
+  "https://www.google-analytics.com/analytics.js",
+  "ga"
+);
+ga("create", "UA-100014360-1", "auto");
+ga("send", "pageview");
+</script>
   <body>
     <div class="info-modal close-info-modal">
       <div class="info-modal-container">
@@ -36,9 +51,21 @@
     </div>
     <header>
       <div class="container">
-        <h1>Movies</h1>
+        <span>Movies</span>
       </div>
     </header>
+    <section class="data">
+      <div class="container">
+        <div class="grid">
+          <div class="grid-item">
+            <h1>Movies</h1>
+          </div>
+          <div class="grid-item">
+            <canvas id="chart" width="100%" height="50vh" style="position: relative;"></canvas>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="movies">
       <div class="container">
         <div class="movie-tickets">
@@ -52,6 +79,7 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <script src="dist/js/app.min.js" charset="utf-8"></script>
   </body>
 </html>
