--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
     <title>Movies</title>
     <meta name="keywords" content="movie, tickets, movie tickets, archive" />
     <meta name="description" content="This site serves as an archive of the movies Jacob Proffer has seen in theatres, powered by JSON and JavaScript." />
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-    <link rel="manifest" href="favicons/manifest.json">
-    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#000000">
-    <link rel="shortcut icon" href="favicons/favicon.ico">
-    <meta name="msapplication-config" content="favicons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/project-main.min.css">
   </head>
@@ -41,15 +33,7 @@ ga("create", "UA-100014360-1", "auto");
 ga("send", "pageview");
 </script>
   <body>
-    <div class="info-modal close-info-modal">
-      <div class="info-modal-container">
-        <p>This site serves as an archive of the movies I've seen in theatres, powered by JSON and JavaScript. I've currently seen <span id="numOfMovies"></span> movies in <span id="numOfTheatres"></span> movie theatres since 2007. All data collected from an enormous amount of movie tickets.</p>
-      </div>
-      <div class="info-modal-footer">
-        <span class="info-modal-close">Close</span>
-      </div>
-    </div>
-    <header>
+    <header class="header">
       <div class="container">
         <span>Movies</span>
       </div>
@@ -73,11 +57,10 @@ ga("send", "pageview");
         </div>
       </div>
     </section>
-    <footer>
+    <!-- <footer>
       <div class="container">
-        <span class="open-info-modal">Info</span>
       </div>
-    </footer>
+    </footer> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <script src="dist/js/app.min.js" charset="utf-8"></script>
