--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ ga("send", "pageview");
       <div class="container">
         <div class="grid">
           <div class="grid-item">
-            <h1>Movies</h1>
+            <h1>Movies Per Year</h1>
           </div>
           <div class="grid-item">
             <canvas id="chart" width="100%" height="50vh" style="position: relative;"></canvas>
