--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@ ga("send", "pageview");
     </header>
     <section class="data">
       <div class="container">
-        <div class="grid">
-          <div class="grid-item">
+        <div class="data__grid">
+          <div class="data__grid__item">
             <h1>Movies Per Year</h1>
           </div>
-          <div class="grid-item">
+          <div class="data__grid__item">
             <canvas id="chart" width="100%" height="50vh" style="position: relative;"></canvas>
           </div>
         </div>
@@ -52,7 +52,7 @@ ga("send", "pageview");
     </section>
     <section class="movies">
       <div class="container">
-        <div class="movie-tickets">
+        <div class="movies__tickets">
           <!-- Date is outputed here -->
         </div>
       </div>
