--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
   a.async = 1;
   a.src = g;
   m.parentNode.insertBefore(a, m);
-})(
+  })(
   window,
   document,
   "script",
   "https://www.google-analytics.com/analytics.js",
   "ga"
-);
-ga("create", "UA-100014360-1", "auto");
-ga("send", "pageview");
-</script>
+  );
+  ga("create", "UA-100014360-1", "auto");
+  ga("send", "pageview");
+  </script>
   <body>
     <header class="header">
       <div class="container container--wide">
@@ -38,21 +38,21 @@ ga("send", "pageview");
       </div>
     </header>
     <section class="data">
-      <div class="container container--mid">
+      <div class="container container--wide">
         <h1>Movies Per Year</h1>
         <div class="data__chart">
-          <canvas id="chart" width="100%" height="50vh" style="position: relative;"></canvas>
+          <canvas id="chart" style="position: relative;"></canvas>
         </div>
       </div>
     </section>
     <section class="movies">
-      <div class="container container--mid">
+      <div class="container container--wide">
         <div class="movies__tickets">
         </div>
       </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-    <script src="dist/js/app.min.js" charset="utf-8"></script>
+    <script src="dist/js/app.min.js"></script>
   </body>
 </html>
