--- a/index.html
+++ b/index.html
@@ -41,17 +41,23 @@
     <!-- The Data -->
     <section class="data">
       <div class="container container--wide">
-        <h1>Movies Per Year</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <div class="data__chart">
-          <canvas id="chart" style="position: relative;"></canvas>
+        <div class="grid data__grid">
+          <div class="data__column__left">
+            <h1>Movies Per Year</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+          <div class="data__column__right">
+            <div class="data__chart">
+              <canvas id="chart" style="position: relative;"></canvas>
+            </div>
+          </div>
         </div>
       </div>
     </section>
     <!-- The Movies -->
     <section class="movies">
       <div class="container container--wide">
-        <div class="movies__tickets">
+        <div class="grid movies__tickets">
         </div>
       </div>
     </section>
