package.json update and clean-up

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <div class="data__chart">
           <canvas id="chart" style="position: relative;"></canvas>
         </div>
+        <p id="number-of-movies"></p>
+        <span id="number-of-theatres"></span>
       </div>
     </section>
     <!-- The Movies -->
