Mess around with styles

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Movies</title>
+    <title>Movies Per Year</title>
     <meta name="description" content="This site serves as an archive of the movies Jacob Proffer has seen in theatres, powered by JSON and JavaScript." />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/project-main.min.css">
   </head>
   <script>
@@ -35,7 +35,7 @@
     <!-- Header -->
     <header class="header">
       <div class="container container--wide">
-        <span>Movies Per Year</span>
+        <h1>Movies Per Year</h1>
       </div>
     </header>
     <!-- The Data -->
