--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Movies Per Year</title>
+    <title>I go to the Movies</title>
     <meta name="description" content="This site serves as an archive of the movies Jacob Proffer has seen in theatres, powered by JSON and JavaScript." />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:700" rel="stylesheet">
@@ -35,7 +35,7 @@
     <!-- Header -->
     <header class="header">
       <div class="container container--wide">
-        <h1>Movies Per Year</h1>
+        <h1>I go to the Movies</h1>
       </div>
     </header>
     <!-- The Data -->
@@ -55,7 +55,7 @@
         </div>
       </div>
     </section>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <script src="dist/js/app.min.js"></script>
   </body>
