--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>I go to the Movies</title>
+    <title>Moviesss</title>
     <meta name="description" content="This site serves as an archive of the movies Jacob Proffer has seen in theatres, powered by JSON and JavaScript." />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/project-main.min.css">
   </head>
   <script>
@@ -34,13 +34,13 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <div class="container container--wide">
-        <h1>I go to the Movies</h1>
+      <div class="container">
+        <h1 class="header__heading"><a href="#">Moviesss</a></h1>
       </div>
     </header>
     <!-- The Data -->
     <section class="data">
-      <div class="container container--wide">
+      <div class="container">
         <div class="data__chart">
           <canvas id="chart" style="position: relative;"></canvas>
         </div>
@@ -50,7 +50,7 @@
     </section>
     <!-- The Movies -->
     <section class="movies">
-      <div class="container container--wide">
+      <div class="container">
         <div class="grid movies__tickets">
         </div>
       </div>
