--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <p>My current favorite ticket is from 2010 when I watched The Town in the now closed Delft theater in Marquette, MI.</p>
             </div>
           </div>
-          <div class="info__item">
+          <div class="info__item info__item--image">
             <img src="#" alt="Image of movie tickets">
           </div>
         </div>
