--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="grid">
           <div class="info__item">
             <div class="info__blurb">
-              <p>This site serves two purposes. First and foremost as an archive of the movies I've seen in theaters since 2007. Secondly, as a data visualization of movies I see per year.</p>
+              <p>This site serves two purposes. First and foremost as an archive of the movies I've seen in theaters since 2007. Secondly, as a data visualization of movies I see per year. All dates are directly from the movie tickets given on the day of viewing.</p>
               <p>I started this collection of movie tickets in 2007. At the time, the tickets were keepsakes for a relationship that I was in. As the years past, I just kept putting the tickets in a black cup with the words, "Dead Man's Brew," printed on the side. Today, the cup is packed with tickets of all shapes, sizes and textures.</p>
               <p>My current favorite ticket is from 2010 when I watched The Town in the now closed Delft theater in Marquette, MI.</p>
             </div>
