--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="This site serves as an archive of the movies Jacob Proffer has seen in theatres since 2007." />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-    <link rel="stylesheet" href="docs/css/project-main.min.css">
+    <link rel="stylesheet" href="css/project-main.min.css">
   </head>
   <script>
   (function(i, s, o, g, r, a, m) {
@@ -93,6 +93,6 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-    <script src="docs/js/app.min.js"></script>
+    <script src="js/app.min.js"></script>
   </body>
 </html>
