--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Movies Per Year</title>
     <meta content="description" name="An archive of the movies Jacob Proffer has seen in theatres since 2007.">
   	<meta property="og:type" content="website" />
-  	<meta property="og:title" content="Jacob Proffer" />
+  	<meta property="og:title" content="Movies Per Year" />
   	<meta property="og:description" content="An archive of the movies Jacob Proffer has seen in theatres since 2007." />
   	<meta property="og:url" content="http://jacobproffer.com/airports/" />
   	<meta property="og:image" content="http://www.jacobproffer.com/movies-per-year/img/movie-tickets.jpg" />
