Update meta tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   	<meta name="twitter:card" content="summary" />
   	<meta name="twitter:description" content="An archive of the movies Jacob Proffer has seen in theatres since 2007." />
   	<meta name="twitter:site" content="@jacobproffer" />
-  	<meta name="twitter:title" content="Jacob Proffer" />
+  	<meta name="twitter:title" content="Movies Per Year" />
   	<meta name="twitter:image" content="http://www.jacobproffer.com/movies-per-year/img/movie-tickets.jpg" />
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <link rel="stylesheet" href="css/project-main.min.css">
