--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Movies Per Year</title>
-    <meta content="description" name="An archive of the movies Jacob Proffer has seen in theatres since 2007.">
+    <meta content="description" name="An archive of the movies Jacob Proffer has seen in theaters since 2007.">
   	<meta property="og:type" content="website" />
   	<meta property="og:title" content="Movies Per Year" />
-  	<meta property="og:description" content="An archive of the movies Jacob Proffer has seen in theatres since 2007." />
+  	<meta property="og:description" content="An archive of the movies Jacob Proffer has seen in theaters since 2007." />
   	<meta property="og:url" content="http://jacobproffer.com/airports/" />
   	<meta property="og:image" content="http://www.jacobproffer.com/movies-per-year/img/movie-tickets.jpg" />
   	<meta name="twitter:card" content="summary" />
-  	<meta name="twitter:description" content="An archive of the movies Jacob Proffer has seen in theatres since 2007." />
+  	<meta name="twitter:description" content="An archive of the movies Jacob Proffer has seen in theaters since 2007." />
   	<meta name="twitter:site" content="@jacobproffer" />
   	<meta name="twitter:title" content="Movies Per Year" />
   	<meta name="twitter:image" content="http://www.jacobproffer.com/movies-per-year/img/movie-tickets.jpg" />
